--- a/src/index.css
+++ b/src/index.css
@@ -34,19 +34,35 @@ code {
 }
 
 .aspectImgs {
-  padding-top: 100%;
+
   display: block;
   width: 100%;
   position: relative;
 }
 
 .aspectImgs .aspectImages {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ModelaspectImgs {
+  padding-top: 100%;
+  display: block;
+  width: 100%;
+  position: relative;
+
+}
+
+
+.ModelaspectImgs img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+
 }
 
 .cursor_pointer {
@@ -90,9 +106,9 @@ code {
 }
 
 .custom_card {
-  padding: 15px;
+  /* padding: 15px; */
   background-color: #fff !important;
-  box-shadow: 0px 22px 35px #3e3e3e45 !important;
+  box-shadow: 0px 22px 35px #3e3e3e17 !important;
   border: 1px solid #eee !important;
 }
 
