--- a/src/index.css
+++ b/src/index.css
@@ -332,12 +332,15 @@ code {
 
 /* All media quaries here below */
 @media (max-width: 992px) {
+  .landing_sec {
+    padding-top: 20px;
+}
   .gridContainer {
     margin: 20px auto;
   }
 
   .searchForm {
-    margin: 20px;
+    margin: 20px 10px 10px 0px;
     top: 20px;
     border-radius: 100px;
   }
